--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "jquery": "^2.2.4",
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
+  },
+  "scripts": {
+	"dev": "webpack --config webpack.config.js",
+	"deploy": "NODE_ENV=production webpack -p --config webpack.config.prod.js"
   }
 }
