--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^2.2.4",
     "keymirror": "^0.1.1",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-router": "^2.6.0"
   }
 }
