--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "keymirror": "^0.1.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-dropzone": "^3.5.3",
     "react-router": "^2.6.0"
   }
 }
