--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
   - "2.7"
 
 install:
-  - pip install -r requirements.txt
+  - pip install --upgrade pip
+  - pip install --upgrade -r requirements.txt
 
 script:
   - py.test tests
