--- a/package.json
+++ b/package.json
@@ -9,35 +9,37 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yabb85/plante-track.git"
+    "url": "git+https://github.com/yabb85/ueki.git"
   },
   "author": "",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/yabb85/plante-track/issues"
+    "url": "https://github.com/yabb85/ueki/issues"
   },
-  "homepage": "https://github.com/yabb85/plante-track#readme",
+  "homepage": "https://github.com/yabb85/ueki#readme",
   "devDependencies": {
-    "babel-core": "^6.9.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
     "json-loader": "^0.5.4",
-    "webpack": "^1.13.1"
+    "webpack": "^1.15.1"
   },
   "dependencies": {
-    "chart.js": "^2.1.4",
-    "flux": "^2.1.1",
-    "jquery": "^2.2.4",
+    "chart.js": "^2.7.1",
+    "flux": "^3.1.3",
+    "immutable": "^3.8.2",
     "keymirror": "^0.1.1",
-    "moment": "^2.18.1",
-    "moment-timezone": "^0.5.11",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14",
+    "react": "^15.6.2",
+    "react-chartjs-2": "^2.7.0",
+    "react-dom": "^15.6.2",
     "react-dropzone": "^3.5.3",
-    "react-router": "^2.6.0"
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
