--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "webpack --config webpack.config.js",
-    "deploy": "NODE_ENV=production webpack -p --config webpack.config.prod.js"
+    "dev": "webpack --devtool source-map --config webpack.config.js",
+    "deploy": "NODE_ENV=production webpack -p --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,16 +18,23 @@
   },
   "homepage": "https://github.com/yabb85/ueki#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^6.4.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.23.1",
-    "json-loader": "^0.5.4",
-    "webpack": "^1.15.1"
+    "extract-text-webpack-plugin": "^3.0.2",
+    "json-loader": "^0.5.7",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "chart.js": "^2.7.1",
     "flux": "^3.1.3",
     "immutable": "^3.8.2",
@@ -38,8 +45,9 @@
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^15.6.2",
     "react-dropzone": "^3.5.3",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.1"
   }
 }
