--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/yabb85/ueki#readme",
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
@@ -25,27 +26,29 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "compression-webpack-plugin": "^0.3.2",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^3.0.2",
     "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.4.5",
     "style-loader": "^0.23.1",
-    "webpack": "^4.7.0",
-    "webpack-cli": "^2.1.2"
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "chart.js": "^2.7.1",
     "flux": "^3.1.3",
     "immutable": "^3.8.2",
-    "keymirror": "^0.1.1",
     "moment": "^2.20.1",
-    "moment-timezone": "^0.5.14",
-    "react": "^15.6.2",
+    "moment-timezone": "^0.5.23",
+    "react": "^16.6.3",
     "react-chartjs-2": "^2.7.0",
-    "react-dom": "^15.6.2",
+    "react-dom": "^16.6.3",
     "react-dropzone": "^3.5.3",
-    "react-redux": "^5.0.7",
+    "react-fontawesome": "^1.6.1",
+    "react-redux": "^5.1.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.1"
